2008-04-06  Sam Weinig  <sam@webkit.org>

        Reviewed by Oliver Hunt.

        Fix codegen for PostIncDotNode and implement codegen for PostIncBracketNode,
        PostDecBracketNode and PostDecDotNode.

        * kjs/nodes.cpp:
        (KJS::PostIncBracketNode::emitCode):
        (KJS::PostDecBracketNode::emitCode):
        (KJS::PostIncDotNode::emitCode):
        (KJS::PostDecDotNode::emitCode):
        * kjs/nodes.h:

2008-04-06  Sam Weinig  <sam@webkit.org>

        Reviewed by Geoffrey Garen.

        Implement codegen for PreDecResolveNode, PreIncBracketNode, PreDecBracketNode,
        PreIncDotNode and PreDecDotNode.  This required adding one new op code, op_pre_dec.

        * VM/CodeBlock.cpp:
        (KJS::CodeBlock::dump):
        * VM/CodeGenerator.cpp:
        (KJS::CodeGenerator::emitPreDec):
        * VM/CodeGenerator.h:
        * VM/Machine.cpp:
        (KJS::Machine::privateExecute):
        * VM/Opcode.h:
        * kjs/nodes.cpp:
        (KJS::PreDecResolveNode::emitCode):
        (KJS::PreIncBracketNode::emitCode):
        (KJS::PreDecBracketNode::emitCode):
        (KJS::PreIncDotNode::emitCode):
        (KJS::PreDecDotNode::emitCode):
        * kjs/nodes.h:

2008-04-06  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Sam Weinig.
        
        Improved register dumping, plus a liberal smattering of "const". Here's
        what the new format looks like:

        (gdb) call (void)dumpCallFrame(codeBlock, scopeChain, registers->begin(), r)
        4 instructions; 48 bytes at 0x509210; 3 locals (2 parameters); 1 temporaries

        [   0] load             lr1, undefined(@k0)
        [   3] load             lr1, 2(@k1)
        [   6] add              tr0, lr2, lr1
        [  10] ret              tr0

        Constants:
          k0 = undefined
          k1 = 2

        Register frame: 

        ----------------------------------------
             use      |   address  |    value   
        ----------------------------------------